--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dev:jd": "npm run build:jd -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
     "dev:harmony-hybrid": "npm run build:harmony-hybrid -- --watch",
-    "test": "jest"
+    "test": "jest",
+
+    "generate-types": "openapi-typescript http://localhost:8080/api/v1/api-docs -o ./types/schema.d.ts"
   },
   "browserslist": [
     "last 3 versions",
